--- a/public/dark-admin/index.html
+++ b/public/dark-admin/index.html
@@ -185,7 +185,8 @@
           <li><a href="tables.html"> <i class="icon-grid"></i>Tables </a></li>
           <li><a href="charts.html"> <i class="fa fa-bar-chart"></i>Charts </a></li>
           <li><a href="forms.html"> <i class="icon-padnote"></i>Forms </a></li>
-          <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-windows"></i>Example dropdown </a>
+          <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> 
+            <i class="icon-windows"></i>Example dropdown </a>
             <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
               <li><a href="#">Page</a></li>
               <li><a href="#">Page</a></li>
